[package]
name = "array-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", optional = true }
ndarray = { version = "0.16.1",optional = true }
nifti = { version = "0.17.0",optional = true }

[features]
io-nifti = ["nifti","ndarray","bytemuck"]

[dev-dependencies]
num-complex = "0.4.6"
