[package]
name = "array-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", optional = true }
ndarray = { version = "0.16.1",optional = true }
nifti = { version = "0.17.0",optional = true }
nrrd-rs = {git = "ssh://git@github.com/wyatt-A/nrrd-rs", optional = true}
num-complex = "0.4.6"
num-traits = "0.2.19"

[features]
io-nifti = ["nifti","ndarray","bytemuck"]
io-nrrd = ["nrrd-rs"]

[dev-dependencies]
num-complex = "0.4.6"
